--- a/GameOfNature/bin/AndroidManifest.xml
+++ b/GameOfNature/bin/AndroidManifest.xml
@@ -8,7 +8,18 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
 
-    <application
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
+    
+    <uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+   
+	<application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -16,12 +27,20 @@
         <activity
             android:name="se.lth.gameofnature.StartActivity"
             android:label="@string/app_name" >
-            <intent-filter>
+        </activity>
+        <activity
+            android:name="se.lth.gameofnature.GameBoardActivity"
+            android:label="@string/title_activity_game_board" >
+       		<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+      	<meta-data
+		    android:name="com.google.android.maps.v2.API_KEY"
+		    android:value="AIzaSyAEgdb7FzjANcaUeUnBj9O_TKtSsSqJaZQ"/>
     </application>
 
 </manifest>
