Fixade fel i manifest

--- a/GameOfNature/AndroidManifest.xml
+++ b/GameOfNature/AndroidManifest.xml
@@ -48,3 +48,4 @@
 		    android:name="com.google.android.maps.v2.API_KEY"
 		    android:value="AIzaSyAEgdb7FzjANcaUeUnBj9O_TKtSsSqJaZQ"/>
     </application>
+</manifest>
