--- a/GameOfNature/bin/AndroidManifest.xml
+++ b/GameOfNature/bin/AndroidManifest.xml
@@ -34,13 +34,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-		
         <activity
             android:name="se.lth.gameofnature.GameBoardActivity"
             android:label="@string/title_activity_game_board" >
         </activity>
 		
-		        <activity
+		<activity
             android:name="se.lth.gameofnature.QuestionActivity"
             android:label="@string/title_activity_question" >
         </activity>
@@ -49,3 +48,4 @@
 		    android:name="com.google.android.maps.v2.API_KEY"
 		    android:value="AIzaSyAEgdb7FzjANcaUeUnBj9O_TKtSsSqJaZQ"/>
     </application>
+</manifest>
