--- a/GameOfNature/bin/AndroidManifest.xml
+++ b/GameOfNature/bin/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:glEsVersion="0x00020000"
         android:required="true"/>
     
+    <permission
+    android:name="se.lth.gameofnature.MAPS_RECEIVE"
+    android:protectionLevel="signature" />
+
+	<uses-permission android:name="se.lth.gameofnature.MAPS_RECEIVE" />
+    
     <uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -48,6 +54,6 @@
         
       	<meta-data
 		    android:name="com.google.android.maps.v2.API_KEY"
-		    android:value="AIzaSyDlHT0jex4CItnynqHaryDIG12aIwqHSrY"/>
+		    android:value="AIzaSyBE0K7e54rO62rUbz8ik8t8JU6pT4Ke9Pg"/>
     </application>
 </manifest>
