--- a/GameOfNature/bin/AndroidManifest.xml
+++ b/GameOfNature/bin/AndroidManifest.xml
@@ -33,16 +33,16 @@
         <activity
             android:name="se.lth.gameofnature.StartActivity"
             android:label="@string/app_name" >
-       
-			<intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name="se.lth.gameofnature.GameBoardActivity"
             android:label="@string/title_activity_game_board" >
+            
+         	<intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 		
         <activity
@@ -55,6 +55,12 @@
             android:name="se.lth.gameofnature.QuestionActivity"
             android:label="@string/title_activity_question" >
         </activity>
+        
+		<service
+		    android:name="se.lth.gameofnature.ReceiveTransitionsIntentService"
+		    android:label="@string/app_name"
+		    android:exported="false">
+		</service>
         
       	<meta-data
 		    android:name="com.google.android.maps.v2.API_KEY"
