--- a/GameOfNature/AndroidManifest.xml
+++ b/GameOfNature/AndroidManifest.xml
@@ -10,22 +10,22 @@
 
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
-    
-    <permission
-    android:name="se.lth.gameofnature.MAPS_RECEIVE"
-    android:protectionLevel="signature" />
+        android:required="true" />
 
-	<uses-permission android:name="se.lth.gameofnature.MAPS_RECEIVE" />
-    
-    <uses-permission android:name="android.permission.INTERNET"/>
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
-	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-   
-	<application
+    <permission
+        android:name="se.lth.gameofnature.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="se.lth.gameofnature.MAPS_RECEIVE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+
+    <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -37,33 +37,36 @@
         <activity
             android:name="se.lth.gameofnature.GameBoardActivity"
             android:label="@string/title_activity_game_board" >
-            
-         	<intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-		
         <activity
             android:name="se.lth.gameofnature.Alternativsida"
             android:label="@string/title_activity_alternativsida" >
         </activity>
-
-		
-		<activity
+        <activity
             android:name="se.lth.gameofnature.QuestionActivity"
             android:label="@string/title_activity_question" >
         </activity>
         
-		<service
-		    android:name="se.lth.gameofnature.ReceiveTransitionsIntentService"
-		    android:label="@string/app_name"
-		    android:exported="false">
-		</service>
-        
-      	<meta-data
-		    android:name="com.google.android.maps.v2.API_KEY"
-		    android:value="AIzaSyBE0K7e54rO62rUbz8ik8t8JU6pT4Ke9Pg"/>
+        <activity
+            android:name="se.lth.gameofnature.TaskMarkerDialog"
+            android:label="@string/title_activity_task_dialog"
+            android:theme="@android:style/Theme.Dialog">
+        </activity>
+
+        <service
+            android:name="se.lth.gameofnature.ReceiveTransitionsIntentService"
+            android:exported="false"
+            android:label="@string/app_name" >
+        </service>
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyBE0K7e54rO62rUbz8ik8t8JU6pT4Ke9Pg" />
     </application>
+
 </manifest>
