--- a/GameOfNature/AndroidManifest.xml
+++ b/GameOfNature/AndroidManifest.xml
@@ -33,7 +33,8 @@
         <activity
             android:name="se.lth.gameofnature.StartActivity"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -47,12 +48,14 @@
         <activity
             android:name="se.lth.gameofnature.Alternativsida"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-            android:label="@string/title_activity_alternativsida" >
+            android:label="@string/title_activity_alternativsida"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="se.lth.gameofnature.QuestionActivity"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-            android:label="@string/title_activity_question" >
+            android:label="@string/title_activity_question"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="se.lth.gameofnature.TaskMarkerDialog"
@@ -73,7 +76,8 @@
         <activity
             android:name="se.lth.gameofnature.StatisticsActivity"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-            android:label="@string/title_activity_statistics" >
+            android:label="@string/title_activity_statistics"
+            android:screenOrientation="portrait" >
         </activity>
         
         
