--- a/GameOfNature/AndroidManifest.xml
+++ b/GameOfNature/AndroidManifest.xml
@@ -43,7 +43,8 @@
         </activity>
         <activity
             android:name="se.lth.gameofnature.GameBoardActivity"
-            android:label="" >
+            android:label="" 
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="se.lth.gameofnature.Alternativsida"
@@ -60,7 +61,8 @@
         <activity
             android:name="se.lth.gameofnature.TaskMarkerDialog"
             android:label="@string/title_activity_task_dialog"
-            android:theme="@android:style/Theme.Dialog" >
+            android:theme="@android:style/Theme.Dialog"
+            android:screenOrientation="portrait" >
         </activity>
 
         <service
