--- a/GameOfNature/AndroidManifest.xml
+++ b/GameOfNature/AndroidManifest.xml
@@ -44,6 +44,7 @@
         <activity
             android:name="se.lth.gameofnature.GameBoardActivity"
             android:label="" 
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:screenOrientation="portrait">
         </activity>
         <activity
@@ -61,7 +62,7 @@
         <activity
             android:name="se.lth.gameofnature.TaskMarkerDialog"
             android:label="@string/title_activity_task_dialog"
-            android:theme="@android:style/Theme.Dialog"
+            android:theme="@style/dialog_light"
             android:screenOrientation="portrait" >
         </activity>
 
