--- a/GameOfNature/AndroidManifest.xml
+++ b/GameOfNature/AndroidManifest.xml
@@ -31,39 +31,47 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="se.lth.gameofnature.StartActivity"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:name="se.lth.gameofnature.SplashActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+        	 <intent-filter>
+            	<action android:name="android.intent.action.MAIN" />
+            	<category android:name="android.intent.category.LAUNCHER" />
+         	</intent-filter>
+      	</activity>
+        <activity
+            android:name="se.lth.gameofnature.StartActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.DEFAULT" />
             </intent-filter>
         </activity>
         <activity
             android:name="se.lth.gameofnature.GameBoardActivity"
-            android:label="" 
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-            android:screenOrientation="portrait">
+            android:label=""
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         </activity>
         <activity
             android:name="se.lth.gameofnature.Alternativsida"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:label="@string/title_activity_alternativsida"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         </activity>
         <activity
             android:name="se.lth.gameofnature.QuestionActivity"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:label="@string/title_activity_question"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         </activity>
         <activity
             android:name="se.lth.gameofnature.TaskMarkerDialog"
             android:label="@string/title_activity_task_dialog"
-            android:theme="@style/dialog_light"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:theme="@style/dialog_light" >
         </activity>
 
         <service
@@ -78,12 +86,10 @@
 
         <activity
             android:name="se.lth.gameofnature.WinnerActivity"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:label="@string/title_activity_statistics"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         </activity>
-        
-        
     </application>
 
 </manifest>
