--- a/GameOfNature/AndroidManifest.xml
+++ b/GameOfNature/AndroidManifest.xml
@@ -35,11 +35,12 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
-        	 <intent-filter>
-            	<action android:name="android.intent.action.MAIN" />
-            	<category android:name="android.intent.category.LAUNCHER" />
-         	</intent-filter>
-      	</activity>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name="se.lth.gameofnature.StartActivity"
             android:label="@string/app_name"
@@ -71,7 +72,7 @@
             android:name="se.lth.gameofnature.TaskMarkerDialog"
             android:label="@string/title_activity_task_dialog"
             android:screenOrientation="portrait"
-            android:theme="@style/dialog_light" >
+            android:theme="@style/CustomAlertDialog" >
         </activity>
 
         <service
@@ -89,6 +90,10 @@
             android:label="@string/title_activity_statistics"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+        </activity>
+        <activity
+            android:name="se.lth.gameofnature.InfoDialog"
+            android:label="@string/title_activity_info_dialog" >
         </activity>
     </application>
 
